--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>22.0</version>
+	    <version>[24.1.1,)</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
